// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown changes the class when clicked 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </div>
</div>
`;

exports[`Dropdown changes the class when clicked 2`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </div>
</div>
`;

exports[`Dropdown changes the class when clicked 3`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={false}
    onMouseLeave={false}
  >
    Click
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 2`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 3`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 4`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 5`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown changes the class when hovered 6`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="uk-button"
    >
      First Instance 
      <i
        className="uk-icon-caret-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 2`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="uk-button"
    >
      First Instance 
      <i
        className="uk-icon-caret-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 3`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="uk-button"
    >
      Second Instance 
      <i
        className="uk-icon-caret-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown closes when clicked when in hover mode 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </div>
</div>
`;

exports[`Dropdown closes when clicked when in hover mode 2`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </div>
</div>
`;

exports[`Dropdown closes when clicked when in hover mode 3`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </div>
</div>
`;

exports[`Dropdown renders correctly 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</div>
`;

exports[`Dropdown renders correctly 2`] = `
<li
  className=""
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className=""
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Parent
  </a>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit
  </div>
</li>
`;

exports[`should be closed 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-button uk-button-default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={false}
    aria-haspopup={true}
    className="uk-hidden"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="uk-button"
    >
      First Instance 
      <i
        className="uk-icon-caret-down"
      />
    </button>
  </div>
</div>
`;

exports[`should be open 1`] = `
<div
  className="uk-inline"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-button uk-button-default uk-open"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hover
  </button>
  <div
    aria-expanded={true}
    aria-haspopup={true}
    className="uk-dropdown uk-open uk-dropdown-bottom-left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="uk-button"
    >
      Second Instance 
      <i
        className="uk-icon-caret-down"
      />
    </button>
  </div>
</div>
`;
